# jellyfin-organizer

./: .gitignore  Dockerfile  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  WORKFLOW_STATUS.md  anime-organizer.service  config.py  docker-compose.yml  install.sh  monitor_downloads.py  pyproject.toml  qbittorrent_config.py  requirements.txt
.github/workflows/: ci-old.yml.disabled  ci.yml
config/: default.conf
docs/: CHANGELOG.md  DEPLOYMENT_SUMMARY.md  README_Sistema_Anime.md
scripts/: organize-anime.sh  qbittorrent-completion.sh
src/: __init__.py  auto_organize_anime.py  monitor_downloads.py
tests/: __init__.py  example_usage.py  teste_temporadas.py
