[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jellyfin-organizer"
version = "2.0.0"
description = "Sistema de Organização Automática de Animes para Jellyfin/Plex"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Hevertton Kikuchi Barbosa", email = "kikuchibarbosa@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Video",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]
keywords = ["anime", "jellyfin", "plex", "organizer", "qbittorrent", "nyaa"]
dependencies = [
    "watchdog>=2.1.0",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/kikuchibarbosa/jellyfin-organizer"
Repository = "https://github.com/kikuchibarbosa/jellyfin-organizer"
Documentation = "https://github.com/kikuchibarbosa/jellyfin-organizer/blob/main/README.md"
Issues = "https://github.com/kikuchibarbosa/jellyfin-organizer/issues"
Changelog = "https://github.com/kikuchibarbosa/jellyfin-organizer/blob/main/docs/CHANGELOG.md"

[project.scripts]
organize-anime = "src.auto_organize_anime:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.conf", "*.service", "*.sh"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
    "*.egg-info",
]